--- a/app/views/cars_logbooks/_index.html.erb
+++ b/app/views/cars_logbooks/_index.html.erb
@@ -7,7 +7,7 @@
       </tr>
       <%- end -%>
       <tr>
-        <td><%= link_to t("attr_#{@options[:title)[:name]}"], :action => 'index', :order => @options[:title][:order] || @options[:title][:name] %></td>
+        <td><%= link_to t("attr_" << @options[:title][:name]), :action => 'index', :order => @options[:title][:order] || @options[:title][:name] %></td>
       <%- for column in @options[:columns] -%>
         <td><%= link_to t((column[:locale))? column[:locale] : "attr_#{column[:name]}"], :action => 'index', :order => column[:order] || column[:name] %></td>
       <%- end -%>
