--- a/app/views/product_categories/index.html.erb
+++ b/app/views/product_categories/index.html.erb
@@ -6,7 +6,7 @@
     </tr>
     <% end %>
     <tr>
-      <td><%= link_to t("attr_#{@options[:title)[:name]}"], :action => 'index', :order => @options[:title][:name] %></td>
+      <td><%= link_to t("attr_" << @options[:title][:name]), :action => 'index', :order => @options[:title][:name] %></td>
     <% for column in @options[:columns] %>
       <td><%= link_to t("attr_#{column}"), :action => 'index', :order => column %></td>
     <% end %>
