--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -2,7 +2,7 @@
 <table class="admin" id="records">
   <thead>
     <tr>
-      <td><%= link_to t("attr_#{@options[:title)[:name]}"], :action => 'index', :order => @options[:title][:name] %></td>
+      <td><%= link_to t("attr_#{@options[:title][:name]}"), :action => 'index', :order => @options[:title][:name] %></td>
     <% for column in @options[:columns] %>
       <td><%= link_to t("attr_#{column}"), :action => 'index', :order => column %></td>
     <% end %>
