--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <%  content_for :javascript do %>
-<%  fw_strings = {:val_true => t('true'), :val_false => t('false'), :submit => t('submit'), :show_all => t('show_all'), :formats => {'xls' => t('download') + " XLS"}} 
+<%  fw_strings = {:val_true => t(:true_class), :val_false => t(:false_class), :submit => t('submit'), :show_all => t('show_all'), :formats => {'xls' => t('download') + " XLS"}} 
     delivery_men_hash = {"null" => t(:none_assigned) }
     @delivery_men.each { |d|
       delivery_men_hash[d.id] = d.name
