--- a/app/views/mass_menu/show.html.haml
+++ b/app/views/mass_menu/show.html.haml
@@ -1,9 +1,10 @@
-- form_for :mass_menu, :url => {:action => :create}, :html => {:class => :mass_menu} do |f|
+- form_for :mass_menu, :html => {:class => :mass_menu, :method => :put} do |f|
   - @scheduled_items.each do |date, items|
     - if @delivery[date][:steps].blank?
       %h1 Na #{format_date_with_weekday(date)} již nelze objednat.
     - else
       - reset_cycle :even
+      - mm = @mass_menu[date]
       %table.menu
         %caption= format_date_with_weekday(date)
         %thead
@@ -22,7 +23,7 @@
               %td
               %td.price= format_currency menu.discount_price(:date => date)
               %td
-                = text_field_tag "mass_menu[#{date}][#{menu.item_id}]"
+                = text_field_tag "mass_menu[#{date}][#{menu.item_id}]", mm[menu.item_id]
 
             - menu.meals.each do |meal|
               %tr{:class => cycle(:even, :odd)}
@@ -32,7 +33,7 @@
                 %td= meal_flags(meal, false)
                 %td.price= format_currency meal.discount_price(:date => date)
                 %td
-                  = text_field_tag "mass_menu[#{date}][#{meal.item_id}]"
+                  = text_field_tag "mass_menu[#{date}][#{meal.item_id}]", mm[meal.item_id]
 
           - items[:categories].each do |category, meals|
             - meals.each do |meal|
@@ -43,16 +44,16 @@
                 %td= meal_flags(meal, false)
                 %td.price= format_currency meal.discount_price(:date => date)
                 %td
-                  = text_field_tag "mass_menu[#{date.to_s}][#{meal.item_id}]"
+                  = text_field_tag "mass_menu[#{date.to_s}][#{meal.item_id}]", mm[meal.item_id]
       %p
         %label{:for => "mass_menu_#{date}_time_of_delivery"}= t(:preferred_time_of_delivery)
         %select{:name => "mass_menu[#{date}][time_of_delivery]", :id => "mass_menu_#{date}_time_of_delivery", :class => "time_filed"}
-          = time_of_delivery_options(@delivery[date][:steps])
+          = time_of_delivery_options(@delivery[date][:steps], mm['time_of_delivery'])
   %p= t(:time_of_delivery_is_approximate)
   %p= t(:user_agreement)
   #user_agreement= snippet 'user_agrement'
   %p#confirm_agreement
-    %input#order_confirmed{:type=>"checkbox", :name=>"order[confirmed]"}
-    %label{:for => "order_confirmed"}=t(:accept_agreement)
+    %input#mass_menu_confirmation{:type=>"checkbox", :name=>"mass_menu[confirmation]"}
+    %label{:for => "mass_menu_confirmation"}=t(:accept_agreement)
   %p.submit
     = f.submit "Pokračovat k potvrzení objednávky", :confirm => "Opravdu pokračovat k potvrzení objednávky?\n\nTento krok nebude možné vrátit."
