--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
     <meta property="og:site_name" content="Zelená kuchyně – vegetariánská restaurace"/>
     <%= yield(:og) || render(:partial => "shared/og") %>
     <link href="<%=url_for(:controller => "menu",:action=>"feed",:format=>"xml")%>" type="application/rss+xml" rel="alternate" title="<%=t(:meal_rss_title)%>" />
-    <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen, projection" charset="utf-8" />
-    <link rel="stylesheet" href="/stylesheets/print.css" type="text/css" media="print" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen, projection" />
+    <link rel="stylesheet" href="/stylesheets/print.css" type="text/css" media="print" />
     <link rel="stylesheet" href="/stylesheets/ui.tabs.css" type="text/css" media="print, projection, screen"/>
     <% for stylesheet in @stylesheets %>
-      <link rel="stylesheet" href="/stylesheets/<%= stylesheet %>.css" type="text/css" charset="utf-8" />
+      <link rel="stylesheet" href="/stylesheets/<%= stylesheet %>.css" type="text/css" />
     <% end if @stylesheets.is_a? Array %>
     <!--[if IE]>
       <link rel="stylesheet" href="/stylesheets/ie.css" type="text/css" media="screen, projection" charset="utf-8" />
@@ -33,21 +33,17 @@
       window.lang = "<%= current_user.interface_language %>";
     //]]>
     </script>
-    <script src="/javascripts/jquery.js" type="text/javascript"></script>
-    <script src="/javascripts/jquery-ui.js" type="text/javascript"></script>
-    <script src="/javascripts/jrails.js" type="text/javascript"></script>
-    <script src="/javascripts/jquery.form.js" type="text/javascript"></script>
-    <script src="/javascripts/jquery.metadata.js" type="text/javascript"></script>
-    <script src="/javascripts/jquery.validate.js" type="text/javascript"></script>
-    <script src="/javascripts/jquery.cookie.js" type="text/javascript"></script>
-    <% for javascript in @javascripts %>
-    <script src="/javascripts/<%= javascript %>.js" type="text/javascript"></script>
-    <% end if @javascripts.is_a? Array %>
+    <%- if Rails.env.production? && !current_user.belongs_to_one_of?(:admins, :heads_of_car_pool, :operating_officers, :warehousers, :deliverymen, :chefs) -%>
+      <%= javascript_include_tag "ga.js", :async => true%>
+    <%- end -%>
+    <%= javascript_include_tag "jquery.js", "jquery-ui.js", "jrails.js", "jquery.form.js", "jquery.metadata.js", "jquery.validate.js", "jquery.cookie.js" %>
+    <%= javascript_include_tag(@javascripts.map{|js| js + ".js"}) if @javascripts.present? %>
+
     <% if current_user.belongs_to_one_of?(:admins, :heads_of_car_pool, :operating_officers, :warehousers, :deliverymen, :chefs) %>
     <link rel="stylesheet" href="/stylesheets/admin.css" type="text/css" media="screen"/>
-    <script src="/javascripts/admin.js" type="text/javascript"></script>
+    <%= javascript_include_tag "admin.js" %>
     <% end %>
-    <script src="/javascripts/application.js" type="text/javascript"></script>
+    <%= javascript_include_tag "application.js" %>
     <style type="text/css" media="screen">
       <%= yield :css %>
     </style>
@@ -124,9 +120,5 @@
     <div id="footer" class="container">
       <%= snippet 'footer' %>
     </div>
-    <%- if RAILS_ENV == "production" && !current_user.belongs_to_one_of?(:admins, :heads_of_car_pool, :operating_officers, :warehousers, :deliverymen, :chefs) -%>
-      <%= render :partial => '/shared/google_analytics' %>
-      <%= render :partial => '/shared/test_javascript'%>
-    <%- end -%>
   </body>
 </html>
