--- a/app/views/shared/_menu_menu.html.erb
+++ b/app/views/shared/_menu_menu.html.erb
@@ -1,6 +1,6 @@
 <%= link_to t(:today_menu), '/menu' %> |
 <%= link_to t(:tomorrow_menu), menu_path(Date.tomorrow) %>
-<%= link_to t(:print_menus), formatted_print_menu_path(:format => :html), :class=> "print_menus"%>
+<%= link_to t(:print_menus), print_menu_path(:format => :html), :class=> "print_menus"%>
 <%- if current_user && current_user.mass_menu %>
   | <%= link_to t(:mass_menu), "/mass_menu" %>
 <%-end-%>
