added submit button locking, fixed timezone issues, fixed sending emails after mass order, fixed session migration id

--- a/app/views/mass_menu/show.html.haml
+++ b/app/views/mass_menu/show.html.haml
@@ -65,4 +65,4 @@
       %input#mass_menu_confirmation{:type=>"checkbox", :name=>"mass_menu[confirmation]"}
       %label{:for => "mass_menu_confirmation"}=t(:accept_agreement)
   %p.submit
-    = f.submit "Pokračovat k potvrzení objednávky", :confirm => "Opravdu pokračovat k potvrzení objednávky?\n\nTento krok nebude možné vrátit."
+    = f.submit "Pokračovat k potvrzení objednávky", :confirm => "Opravdu pokračovat k potvrzení objednávky?\n\nTento krok nebude možné vrátit.", :class => 'lock'
