--- a/app/views/mass_menu/update.html.haml
+++ b/app/views/mass_menu/update.html.haml
@@ -47,4 +47,4 @@
             %td
   %p.submit
     = link_to "Zpět na úpravu objednávek", mass_menu_path
-    = submit_tag "Závazně odeslat všechny objednávky", :confirm => "Opravdu chcete odeslat všechny objednávky?\n\nTato akce nelze vrátit zpět."
+    = submit_tag "Závazně odeslat všechny objednávky", :confirm => "Opravdu chcete odeslat všechny objednávky?\n\nTato akce nelze vrátit zpět.", :class => 'lock'
