--- a/app/views/meals/_show.html.erb
+++ b/app/views/meals/_show.html.erb
@@ -1,5 +1,5 @@
 <td><%= link_to record.name, :action => 'show', :id => record %><div style='display: none;'>
-    <%= record.ingredients.by_name.to_json(:only => :name) %>
+    <%= h record.ingredients.by_name.to_json(:only => :name) %>
     </div>
     <script type="text/javascript">$(function() {  $("a[href^='/meals/show/']").tooltip(); });</script>
 </td>
