--- a/app/views/menus/_show.html.erb
+++ b/app/views/menus/_show.html.erb
@@ -1,5 +1,5 @@
 <td><%= link_to record.name, :action => 'show', :id => record %><div style='display: none;'>
-    <%= record.meals.to_json(:only => :name) %>
+    <%= h record.meals.to_json(:only => :name) %>
     </div>
     <script type="text/javascript">$(function() {  $("a[href^='/menus/show/']").tooltip(); });</script>
 </td>
