change map and contact

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,7 +17,7 @@
 <% content_for :javascript do %>
   jQuery(function(){
     jQuery('#restaurace_photo').lightBox();
-    $("#map img").replaceWith('<iframe width="350" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=cs&amp;geocode=&amp;q=mil%C3%AD%C4%8Dova+5&amp;sll=50.082315,14.463329&amp;sspn=0.041307,0.071754&amp;ie=UTF8&amp;ll=50.085055,14.450369&amp;spn=0.00413,0.006437&amp;z=16&amp;output=embed"></iframe>');
+    $("#map img").replaceWith('<iframe width="350" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=cs&amp;geocode=&amp;q=Svobodova+11,+Praha+2&amp;aq=&amp;sll=50.067942,14.420609&amp;sspn=0.00865,0.019205&amp;ie=UTF8&amp;hq=&amp;hnear=Svobodova+135%2F11,+128+00+Praha+2-Vy%C5%A1ehrad,+%C4%8Cesk%C3%A1+republika&amp;t=m&amp;z=14&amp;ll=50.067942,14.420609&amp;output=embed"></iframe>');
   });
 <% end %>
 <%= render :partial => 'shared/user_sidebar'%>
