--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
 <div class="box">
   <h3><%= t(:where_you_can_find_us)%></h3>
   <div id="map">
-    <img src="/images/map.png" width="350" height="300" alt="Milíčova 5, Praha 3-Žižkov"/>
+    <img src="/images/map.png" width="350" height="300" alt="Svobodova 11, Praha 2-Albertov"/>
     <br/>
     <a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=cs&amp;geocode=&amp;q=mil%C3%AD%C4%8Dova+5&amp;sll=50.082315,14.463329&amp;sspn=0.041307,0.071754&amp;ie=UTF8&amp;ll=50.085055,14.450369&amp;spn=0.00413,0.006437&amp;z=16" rel="external">Zobrazit větší mapu</a>
   </div>
