--- a/app/views/layouts/application.print.erb
+++ b/app/views/layouts/application.print.erb
@@ -64,13 +64,13 @@
     <script type="text/javascript">
     //<![CDATA[
       <%= yield :javascript %>
-      $(function(){
-          window.print();
-          setTimeout(function(){
-            //window.history.back();
-          }, 100);
+      $(window).bind('load', function(){
+        window.print();
+        setTimeout(function(){
+          //window.history.back();
+        }, 100);
       });
-        //]]>
+    //]]>
     </script>
     <title><%= t('layout_title') %><%= yield(:title) || '' %></title>
     <%= yield(:head) %>
