--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -34,6 +34,7 @@
   <% end %>
   </tbody>
 </table>
+
 <h1><%= t(:delivery_address)%></h1>
 <% unless @order.user.delivery_address.first_name.blank? or @order.user.delivery_address.family_name.blank? %>
 <p><%= t(:name_and_family_name)%>:  <strong><%= h @order.user.delivery_address.first_name %> <%=h @order.user.delivery_address.family_name%></strong></p>
@@ -51,17 +52,20 @@
 <% unless @order.user.delivery_address.zone.nil?%>
 <p><%= t(:delivery_zone).mb_chars.capitalize%>: <strong><%= @order.user.delivery_address.zone.name%></strong> <%= "ne" unless @order.user.delivery_address.zone_reviewed? %>ověřena administrátorem.</p>
 <% end%>
+
 <h1><%= t(:preferred_time_of_delivery)%></h1>
-<p><%= t(:your_order_will_be_delivered_on).gsub('{date}', "<strong>#{format_date(@order.deliver_at)}</strong>") %></p>
-<p><%= "#{t(:preferred_time_of_delivery)}: <strong class=\"print_time\">#{format_time(@order.deliver_at)}</strong>" %></p>
+<p class="deliver-on"><%= t(:your_order_will_be_delivered_on).gsub('{date}', "<strong>#{format_date(@order.deliver_at)}</strong>") %></p>
+<p class="delivery-time"><%= "#{t(:preferred_time_of_delivery)}: <strong class=\"print_time\">#{format_time(@order.deliver_at)}</strong>" %></p>
+
 <h1><%= t(:additional_info)%></h1>
-<p><%= t(:model_user).mb_chars.capitalize%>: <%= link_to @order.user.name, :controller => "users", :action => "show", :id => @order.user%></p>
-<p><%=  t(:attr_order_state).mb_chars.capitalize %>: <%= t("order_status_#{@order.state}") %></p>
+<p class="user"><%= t(:model_user).mb_chars.capitalize%>: <%= link_to @order.user.name, :controller => "users", :action => "show", :id => @order.user%></p>
+<p class="state"><%=  t(:attr_order_state).mb_chars.capitalize %>: <%= t("order_status_#{@order.state}") %></p>
 <p class="notice"><%= t(:note).mb_chars.capitalize%>:<br/><%= h @order.notice %></p>
 <% if !@order.user.admin_note.blank? && current_user.belongs_to?("admins")%>
 <p><%= t(:admin_note)%>: <strong><%= h @order.user.admin_note%></strong></p>
 <% end%>
 </div>
+
 <% if @print %>
 <script type="text/javascript">
   print_and_close();
