use checkboxes to toggle scheduled item visiblity

--- a/app/views/schedule/_agenda.html.erb
+++ b/app/views/schedule/_agenda.html.erb
@@ -1,3 +1,11 @@
+<% content_for :javascript do %>
+  $(function(){
+    $("form .auto-update").change(function(){
+      this.form.onsubmit();
+    });
+  });
+<%end %>
+
 <div id="agenda">
   <table class="admin">
     <thead>
