--- a/app/views/menu/show.html.erb
+++ b/app/views/menu/show.html.erb
@@ -8,44 +8,67 @@
     <h1><%= t(:menu_for_the_day) %>: <%= format @date %></h1>
   <%- end -%>
 <%-end-%>
-<div class="menus<%=" disabled" if @delivery[:disabled]%>">
-<% for menu in @menus 
-  sold_out = nil %>
-  <h2><%= menu.name.mb_chars.capitalize %></h2>
-  <% for meal in menu.meals 
-  sold_out = @sold_out.has_key?(meal.id) || sold_out %>
-    <%= render :partial => 'meal', :locals => {:meal => meal, :sold_out => @sold_out.has_key?(meal.id)} %>
-  <% end %>
-  
-  <div class="meal">
-    <div class="meal_text"><h3><%= t(:whole_menu)%><span class="soldout"><%= t(:sold_out) if sold_out%></span></h3></div>
-    <% form_tag :controller => 'basket', :action => 'add_item' do %>
-      <p class="price"><%= t(:price) %>: <strong><%= format_currency(menu.discount_price :date => @date)%></strong></p>
-      <fieldset>
-        <input type="hidden" name="item[item_id]" value="<%= menu.item_id %>" />
-        <input type="hidden" name="item[deliver_on]" value="<%= @date %>" />
-        <p><label for="item_<%= menu.item_id %>_amount"><%= t(:portions)%>:</label>
-        <input class="amount_input" <%='disabled="disabled"' if sold_out || @delivery[:disabled]%> type="text" name="item[amount]" id="item_<%= menu.item_id %>_amount" /></p>
-        <p><input type="image" src="/images/form_add_to_basket<%= "_gray" if sold_out || @delivery[:disabled]%>.gif" <%= 'disabled="disabled"' if sold_out || @delivery[:disabled]%> value="<%= t(:to_basket)%>" /></p>
-      </fieldset>
+
+<p id="menu-switch" class="cf">
+  <a href="#daily-menu">Denní menu</a>
+  <a href="#stable-menu">Stálá nabídka</a>
+  <span class="clearfix"/>
+</p>
+
+<div id="daily-menu" class="menus<%=" disabled" if @delivery[:disabled]%>">
+  <% for menu in @menus 
+    sold_out = nil %>
+    <h2><%= menu.name.mb_chars.capitalize %></h2>
+    <% for meal in menu.meals 
+    sold_out = @sold_out.has_key?(meal.id) || sold_out %>
+      <%= render :partial => 'meal', :locals => {:meal => meal, :sold_out => @sold_out.has_key?(meal.id)} %>
     <% end %>
-  </div>
-<% end %>
-<% for category in @categories %>
-  <h2><%= category.name.mb_chars.capitalize %></h2>
-  <% for meal in category.meals %>
-    <%= render :partial => 'meal', :locals => {:meal => meal, :sold_out => @sold_out.has_key?(meal.id)} %>
+    
+    <div class="meal">
+      <div class="meal_text"><h3><%= t(:whole_menu)%><span class="soldout"><%= t(:sold_out) if sold_out%></span></h3></div>
+      <% form_tag :controller => 'basket', :action => 'add_item' do %>
+        <p class="price"><%= t(:price) %>: <strong><%= format_currency(menu.discount_price :date => @date)%></strong></p>
+        <fieldset>
+          <input type="hidden" name="item[item_id]" value="<%= menu.item_id %>" />
+          <input type="hidden" name="item[deliver_on]" value="<%= @date %>" />
+          <p><label for="item_<%= menu.item_id %>_amount"><%= t(:portions)%>:</label>
+          <input class="amount_input" <%='disabled="disabled"' if sold_out || @delivery[:disabled]%> type="text" name="item[amount]" id="item_<%= menu.item_id %>_amount" /></p>
+          <p><input type="image" src="/images/form_add_to_basket<%= "_gray" if sold_out || @delivery[:disabled]%>.gif" <%= 'disabled="disabled"' if sold_out || @delivery[:disabled]%> value="<%= t(:to_basket)%>" /></p>
+        </fieldset>
+      <% end %>
+    </div>
   <% end %>
-  <% for sb in @scheduled_bundles %>
-    <%= render :partial => 'meal', :locals => {:meal => sb.bundle, :sold_out => @sold_out.has_key?(sb.bundle.meal.id)} if category == sb.bundle.meal.meal_category %>
-  <% end%>
-<% end %>
-  <div id="add_all_items">
-    <% form_remote_tag :url => {:controller => :basket, :action => "add_item"}, :html => { :onsubmit => "jQuery(this).add_all_items()"} do -%>
-    <p><input type="hidden" name="item[deliver_on]" value="<%=@date.to_s%>"/></p>
-    <%end%>
-  </div>
+  <% for category in @categories %>
+    <h2><%= category.name.mb_chars.capitalize %></h2>
+    <% for meal in category.meals %>
+      <%= render :partial => 'meal', :locals => {:meal => meal, :sold_out => @sold_out.has_key?(meal.id)} %>
+    <% end %>
+    <% for sb in @scheduled_bundles %>
+      <%= render :partial => 'meal', :locals => {:meal => sb.bundle, :sold_out => @sold_out.has_key?(sb.bundle.meal.id)} if category == sb.bundle.meal.meal_category %>
+    <% end%>
+  <% end %>
 </div>
+
+<div id="stable-menu" class="menus<%=" disabled" if @delivery[:disabled]%>">
+  <h2><%= category.name.mb_chars.capitalize %></h2>
+
+  <% for category in @always_available %>
+    <% for meal in category.meals %>
+      <%= render :partial => 'meal', :locals => {:meal => meal, :sold_out => @sold_out.has_key?(meal.id)} %>
+    <% end %>
+  <% end %>
+</div>
+
+<div id="add_all_items">
+  <% form_remote_tag :url => {:controller => :basket, :action => "add_item"}, :html => { :onsubmit => "jQuery(this).add_all_items()"} do -%>
+  <p><input type="hidden" name="item[deliver_on]" value="<%=@date.to_s%>"/></p>
+  <%end%>
+</div>
+
+<% content_for :javascript do %>
+  $(function(){ $('#menu-switch').switch() });
+<% end %>
+
 <%- if @delivery[:disabled] -%>
  <% content_for :css do%>
   #contents {
