change address in metadata

--- a/app/views/shared/_og.html.erb
+++ b/app/views/shared/_og.html.erb
@@ -1,10 +1,10 @@
 <meta property="og:description"
   content="Zelená kuchyně je restaurace s čistě vegetariánskou kuchyní. Jídla vaříme a připravujeme ze zeleniny, obilovin, luštěnin, mléčných výrobků, ovoce, oříšků, medu, bylinek a koření a jiných čistých surovin."/>
-<meta property="og:latitude" content="50.084838"/>
-<meta property="og:longitude" content="14.450813"/>
-<meta property="og:street-address" content="Milíčova 415/5"/>
+<meta property="og:latitude" content="50.0679850"/>
+<meta property="og:longitude" content="14.4206203"/>
+<meta property="og:street-address" content="Svobodova 135/11"/>
 <meta property="og:locality" content="Prague"/>
-<meta property="og:postal-code" content="13000"/>
+<meta property="og:postal-code" content="12800"/>
 <meta property="og:country-name" content="Czech Republic"/>
 <meta property="og:type" content="restaurant"/>
 <meta property="og:image" content=<%= url_for(:controller => :images, :action => "restaurace_250.jpg", :only_path => false).inspect %>/>
