fix toggling scheduled meals

--- a/app/views/schedule/_agenda.html.erb
+++ b/app/views/schedule/_agenda.html.erb
@@ -1,8 +1,6 @@
 <% content_for :javascript do %>
-  $(function(){
-    $("form .auto-update").change(function(){
-      this.form.onsubmit();
-    });
+  $("form .auto-update").live('change', function(){
+    this.form.onsubmit();
   });
 <%end %>
 
