--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -1340,7 +1340,9 @@ p#menu-switch {
 }
 
 #menu-switch a {
+  color: white;
   color: inherit;
+
   text-decoration: none;
 
   display: inline-block;
